--- a/app/views/settings/_redmine_percent_done.html.erb
+++ b/app/views/settings/_redmine_percent_done.html.erb
@@ -1,11 +1,10 @@
-<% for status in IssueStatus.all do %>
-  <p>
-    <label for="settings_status-<%= status.id %>"><%= status.name %></label>
-    <%= select_tag "settings[status-#{status.id}]",
-          options_from_collection_for_select(
-            [[l(:label_no_change_option), '']] +
-              (0..10).to_a.collect{|r| ["#{r*10} %", r*10] },
-            :last, :first, @settings["status-#{status.id}"]
-          ) %>
-  </p>
-<% end %>
+<p>
+  <label for="settings_field-to-link">Setting field to link with spent & estimated time.</label>
+  <%= select_tag "settings[status-#field-to-link]",
+                 options_from_collection_for_select(
+                     [[l(:label_no_change_option), '']] +
+                     IssueCustomField.all,
+                     :last, :first, @settings["status-#field-to-link"]
+                 ) %>
+</p>
+
